<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txtNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swIva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swIva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="616dp" />

    <TextView
        android:id="@+id/lblModulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/lblModulo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/lblTurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:text="@string/lblTurno"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <RadioGroup
        android:id="@+id/rgModulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblModulo">

        <RadioButton
            android:id="@+id/rBtnDam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rBtnDam" />

        <RadioButton
            android:id="@+id/rBtnDaw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnDaw" />

        <RadioButton
            android:id="@+id/rBtnAsir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnAsir" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTurno">

        <RadioButton
            android:id="@+id/rBtnMorning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rBtnMorning" />

        <RadioButton
            android:id="@+id/rBtnTarde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnTarde" />

        <RadioButton
            android:id="@+id/rBtnOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnOnline" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/swIva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>